--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="card-body">
                 <h5 class="card-title">Apple MacBook</h5>
                 <p class="card-text">Apple M1 chip, 13.3-inch/33.74 cm Retina Display, 8GB RAM, 256GB SSD Storage, FaceTime HD Camera,</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="https://www.amazon.in/Apple-MacBook-Chip-13-inch-256GB/dp/B08N5W4NNB/?_encoding=UTF8&pd_rd_w=zTEPP&content-id=amzn1.sym.aff93425-4e25-4d86-babd-0fa9faf7ca5d%3Aamzn1.symc.36bd837a-d66d-47d1-8457-ffe9a9f3ddab&pf_rd_p=aff93425-4e25-4d86-babd-0fa9faf7ca5d&pf_rd_r=A3ZPCVR09DPNTYR9BYVQ&pd_rd_wg=ThefS&pd_rd_r=6a830ade-1bd6-4f27-a7ba-8b4b1e8f4758&ref_=pd_hp_d_btf_ci_mcx_mr_hp_atf_m" class="btn btn-primary">Details</a>
               </div>
             </div>
           </div>
@@ -95,7 +95,7 @@
               <div class="card-body">
                 <h5 class="card-title">LG 201</h5>
                 <p class="card-text">LG 201 L 5 Star Inverter Direct-Cool Single Door Refrigerator GL-D211HBCZ, Base stand with drawer</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="https://www.amazon.in/ELECTROLUX-Refrigerator-TasteLockAuto-TasteGuard-UltimateTaste/dp/B0BRQ9JZYM/ref=sr_1_1_sspa?crid=Y6LUIIWG10PH&dib=eyJ2IjoiMSJ9.vAwiKqYno4blsCOyOe3qWEs6qSkwQnDcHe8z-ySeo3puCW7C-G4GhDnjeAcuVgKqXBlI5GYNez6XOPF7kqLXgp_bfYt2hPHZbFpEqxnezJvao2dLADLLGrptxq83hk4CHn8BhJDH7CtjaX23M8jJ_gDVJS5OY_rQEeqQalriLdClAQrdPFxC_87vGylKsVBi6MGfx-ghNZw9pFvMXOPCaMYhIcHHOP-j_w4TLkCmUEw.P0JDNR_xZtqwmRNTKMau4Q8TS1PsP1ojLBiTwQwSNlg&dib_tag=se&keywords=LG+201+L+5+Star+Inverter+Direct-Cool&nsdOptOutParam=true&qid=1731842293&sprefix=lg+201+l+5+star+inverter+direct-cool+%2Caps%2C251&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" class="btn btn-primary">Details</a>
               </div>
             </div>
           </div>
@@ -106,7 +106,7 @@
               <div class="card-body">
                 <h5 class="card-title">LG 8</h5>
                 <p class="card-text">LG 8 Kg, 5 Star, Direct Technology, Steam Wash, Smart Diagnosis, Fully Automatic  Load Washing Machine</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="https://www.amazon.in/LG-Inverter-Fully-Automatic-Washing-FHM1207SDW/dp/B0B1DNTKP5/ref=sr_1_1?crid=3TVALU93EHSVQ&dib=eyJ2IjoiMSJ9.Vto8nRS4PJhu1vL70R3gnMbaXREl9cstRscQs93BmXezXWz1A93XCt-3_xCEgNZloiZAeIe8IvkDWqrIy02PVSHa1z2oCSqtT4Pu-wdMQfbXE9-UXnCI1w_Mhal3rQm03EHa83D8VbA6KnM7x3FzBs9nzZGYMqxxKFOypnT4S-4pn7QcFL1yT6STCuZotPrzI9qL983ji38jFnIDvJIF61p-c-Te7zMAh2GCekI3UmM.G3EQuUiDrNd44XLJB4Bk6v1P1RLYUKko5sdhXpXQalE&dib_tag=se&keywords=LG+8+Kg%2C+5+Star%2C+Direct+Technology%2C+Steam+Wash%2C+Smart+Diagnosis%2C+Fully+Automatic+Load+Washing+Machine&nsdOptOutParam=true&qid=1731842342&sprefix=lg+8+kg%2C+5+star%2C+direct+technology%2C+steam+wash%2C+smart+diagnosis%2C+fully+automatic+load+washing+machine%2Caps%2C261&sr=8-1" class="btn btn-primary">Details</a>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@
               <div class="card-body">
                 <h5 class="card-title">Voltas 1.5</h5>
                 <p class="card-text">Voltas 1.5 Ton 3 Star, Inverter Split AC Copper, 4 in 1 Adjustable Cooling, Anti-dust Filter, 2023 Model</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="https://www.amazon.in/Panasonic-Condenser-Convertible-CS-CU-NU18ZKY5W/dp/B0CSCWVKGK/ref=sr_1_1_sspa?crid=1GMIDRWJYMA4R&dib=eyJ2IjoiMSJ9.gD54ZxDEH6pQPwHUIbc5GyFsJ_HPxyRP1E1NhWe6er0rXiigtK2WwTrTOeP1hJJsHZAgqUn11KsG-ayinReUhfbPeQ4VmGFitjB-v8YvUaO6g6EA-s5sqmq9Mve651zrZyaNkVVnowZP71QOP735D-T_XPP9XUmFQseAkrHsV2CY8E-5cNJ9hCXYQj2ozV276NGOXUtgRvBgLVRarmurtxKTx2WA-DIzWTLfBNB4rFQ.fo4Zh3ik3d3Rl6jcERMWvu8vCcOKP6t4S3rZ4XgT5B4&dib_tag=se&keywords=Voltas+1.5+Ton+3+Star%2C+Inverter+Split+AC+Copper%2C+4+in+1+Adjustable+Cooling%2C+Anti-dust+Filter%2C+2023+Model&nsdOptOutParam=true&qid=1731842383&sprefix=voltas+1.5+ton+3+star%2C+inverter+split+ac+copper%2C+4+in+1+adjustable+cooling%2C+anti-dust+filter%2C+2023+model%2Caps%2C317&sr=8-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1" class="btn btn-primary">Details</a>
               </div>
             </div>
           </div>
